JVM深入理解读书笔记

--- a/_posts/java/2017-02-12-jvm.md
+++ b/_posts/java/2017-02-12-jvm.md
@@ -9,7 +9,52 @@ description: 深入理解JVM虚拟机-读书笔记
 
 详见《深入理解JVM虚拟机》读书笔记
 
+[思维导图](/assets/achives/file/深入理解JVM虚拟机.xmind)
+
+![深入理解JVM](/assets/achives/images/深入理解JVM虚拟机.png)
+
 ### 运行时数据区
+
+```wiki
+堆
+  新生代
+  老年代
+
+方法区|永久带
+
+栈
+  虚拟机栈
+  本法方法栈
+
+程序计数器
+```
+
 ### 对象存活判定算法
+引用计数
+可达性引用链(GC ROOT 引用树)
+
 ### 垃圾收集算法
+1. 标记-清除
+2. 标记-复制
+3. 标记-整理
+4. 分代回收(结合新生代的标记-复制和老年代的标记-整理算法)
+
 ### 垃圾收集器
+1. 新生代和老年代垃圾有特定的回收器
+2. 通常说的CMS针对老年代的垃圾回收器、G1GC比较特殊，JDK1.7-50推出的回收器，采用分代回收算法作用于新生代和老年代
+
+
+### GC日志分析
+1. 各个垃圾回收器打印log格式不一
+2. GC选型
+3. GC优化标准，统计MinorGC和MajorGC的频率和时间
+
+### 编译器和程序自动优化
+
+### 高效并发
+1. 主内存和工作内存
+2. 交互操作（lock/unlock/read/load/use/assign/store/write）
+3. volatile
+4. long和double特殊性，虚拟机针对64位的数据读写操作作为原子性操作
+5. 基于lock和unlock操作，虚拟机提供了monitorenter和monitorexit字节码指令隐式实现的synchronized
+6. 线程状态（New、Running、Waiting、Timed Waiting、Blocked、Terminaled）
