--- a/_posts/bigdata/2016-08-10-storm集群搭建.md
+++ b/_posts/bigdata/2016-08-10-storm集群搭建.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: Strom集群搭建
+title: Strom集群HA搭建
 categories: bigdata
-description: Storm集群搭建
+description: Storm集群HA搭建
 ---
 
 Storm集群搭建
@@ -245,4 +245,3 @@ storm kill [topologyName]
 [Storm并行度](http://blog.xiaoxiaomo.com/2016/06/09/Storm-%E5%B9%B6%E8%A1%8C%E5%BA%A6/)
 
 [Storm性能优化](http://www.jianshu.com/p/f645eb7944b0)
-
