--- a/_posts/java/2017-04-14-netty内存模型.md
+++ b/_posts/java/2017-04-14-netty内存模型.md
@@ -8,8 +8,8 @@ description: netty内存模型
 
 ### 单线程模型
 
-[内存模型](/assets/achives/images/NIO单线程模型.png)
+![单线程内存模型](/assets/achives/images/NIO单线程模型.png)
 
 ### 多线程模型
 
-[内存模型](/assets/achives/images/NIO多线程模型.png)
+![Reactor多线程模型](/assets/achives/images/NIO多线程模型.png)
