--- a/_posts/bigdata/2016-08-10-storm集群搭建.md
+++ b/_posts/bigdata/2016-08-10-storm集群搭建.md
@@ -12,14 +12,14 @@ Storm集群搭建
 
 [zookeeper-3.4.8](https://zookeeper.apache.org/doc/r3.4.8/)  
 
-[jdk-7u79-linux-x64.tar.gz]()  
+[jdk-7u79-linux-x64.tar.gz](http://www.oracle.com/technetwork/java/javase/downloads/java-archive-downloads-javase7-521261.html#jdk-7u79-oth-JPR)  
 
 [Netty-4.1.3.Final.tar.bz2](https://bintray.com/package/files/netty/downloads/netty)  
 
 #### 主机配置：
-nimbus01|nimbus02 2核4G  
+  nimbus01、nimbus02 2核4G  
 
-supervisor01|supervisor02|supervisor03 8核16G  
+  supervisor01、supervisor02、supervisor03 8核16G  
 
 ### 主机uname
 以新建nimbus01主机为例  
@@ -52,21 +52,18 @@ cd ~/.ssh
 ssh-keygen -t rsa
 # 三次回车
 cat id_rsa.pub >> authorized_keys
-
 # 登录其他主机将id_rsa.pub拷贝到nimbus01的.ssh目录下
 cat id_rsa_nimbus02.pub >> authorized_keys
 cat id_rsa_supervisor01.pub >> authorized_keys
 cat id_rsa_supervisor02.pub >> authorized_keys
 cat id_rsa_supervisor03.pub >> authorized_keys
-
 # 将authorized_keys
 scp /root/.ssh/authorized_keys nimbus01:/root/.ssh/
 scp /root/.ssh/authorized_keys nimbus02:/root/.ssh/
 scp /root/.ssh/authorized_keys supervisor01:/root/.ssh/
 scp /root/.ssh/authorized_keys supervisor02:/root/.ssh/
 scp /root/.ssh/authorized_keys supervisor03:/root/.ssh/
-
-# 修改文件权限
+修改文件权限
 chmod 600 authorized_keys
 ```
 
