--- a/_posts/linux/2017-04-12-系统资源监控命令.md
+++ b/_posts/linux/2017-04-12-系统资源监控命令.md
@@ -7,22 +7,25 @@ description: 命令解释
 
 各个系统资源监控命令
 
-uptime
-15:41:00 up 182 days, 22:31,  1 user,  load average: 0.00, 0.00, 0.00
+#### uptime
+> 15:41:00 up 182 days, 22:31,  1 user,  load average: 0.00, 0.00, 0.00
 
-这个命令显示了要运行的任务（进程）数，通过它能够快速了解系统的平均负载。
+> 这个命令显示了要运行的任务（进程）数，通过它能够快速了解系统的平均负载。
 
-mpstat -P ALL 1
+#### mpstat -P ALL 1
 
-Linux 2.6.32-431.23.3.el6.x86_64 (iZ25sienu61Z) 01/20/2016 _x86_64_	(2 CPU)
+> Linux 2.6.32-431.23.3.el6.x86_64 (iZ25sienu61Z) 01/20/2016 _x86_64_	(2 CPU)
 
+```wiki
 03:41:16 PM  CPU    %usr   %nice    %sys %iowait    %irq   %soft  %steal  %guest   %idle
 03:41:17 PM  all    2.01    0.00    0.00    0.00    0.00    0.00    0.00    0.00   97.99
 03:41:17 PM    0    3.06    0.00    0.00    0.00    0.00    0.00    0.00    0.00   96.94
 03:41:17 PM    1    0.00    0.00    0.00    0.00    0.00    0.00    0.00    0.00  100.00
-这个命令显示每个CPU的时间使用百分比，你可以用它来检查CPU是否存在负载不均衡。单个过于忙碌的CPU可能意味着整个应用只有单个线程在工作。
+```
+> 这个命令显示每个CPU的时间使用百分比，你可以用它来检查CPU是否存在负载不均衡。单个过于忙碌的CPU可能意味着整个应用只有单个线程在工作。
 
-dmesg | tail
+#### dmesg | tail
+```shell
 TCP: time wait bucket table overflow
 TCP: time wait bucket table overflow
 TCP: time wait bucket table overflow
@@ -33,40 +36,51 @@ TCP: time wait bucket table overflow
 TCP: time wait bucket table overflow
 TCP: time wait bucket table overflow
 TCP: time wait bucket table overflow
-这个命令显示了最新的10个系统信息，如果有的话。注意会导致性能问题的错误信息。
+```
+> 这个命令显示了最新的10个系统信息，如果有的话。注意会导致性能问题的错误信息。
 
 
-
+```shell
 procs -----------memory---------- ---swap-- -----io---- --system-- -----cpu-----
  r  b   swpd   free   buff  cache   si   so    bi    bo   in   cs us sy id wa st
  0  0      0 460656 157692 2125436    0    0     0     3    1    1  1  0 98  0  0
  0  0      0 460648 157692 2125436    0    0     0     0  299  368  0  0 100  0  0
  0  0      0 460648 157692 2125436    0    0     0    68  549  531  3  0 97  0  0
  0  0      0 460648 157692 2125440    0    0     0    36  781  465  2  1 98  0  0
+```
+```wiki
 r：等待CPU的进程数。该指标能更好地判定CPU是否饱和，因为它不包括I/O。简单地说，r值高于CPU数时就意味着饱和。
 free：空闲的内存千字节数。如果你数不清有多少位，就说明系统内存是充足的。接下来要讲到的第7个命令，free -m，能够更清楚地说明空闲内存的状态。
 si，so：Swap-ins和Swap-outs。如果它们不为零，意味着内存已经不足，开始动用交换空间的存粮了。
 us，sy，id，wa，st：它们是所有CPU的使用百分比。它们分别表示user time，system time（处于内核态的时间），idle，wait I/O和steal time（被其它租户，或者是租户自己的Xen隔离设备驱动域（isolated driver domain），所占用的时间）
+```
 
-free -m
-                    total       used       free     shared    buffers     cached
+#### free -m
+```shell
+total       used       free     shared    buffers     cached
 Mem:          3829       3380        449          0        153       2076
 -/+ buffers/cache:       1150       2679
 Swap:            0          0          0
-
+```
+```wiki
 buffers：用于块设备I/O的缓冲区缓存
 cached：用于文件系统的页缓存
+```
 
-pidstat 1
+#### pidstat 1
+```shell
 Linux 2.6.32-431.23.3.el6.x86_64 (iZ25sienu61Z) 01/20/2016 _x86_64_	(2 CPU)
 
 03:47:33 PM       PID    %usr %system  %guest    %CPU   CPU  Command
 03:47:34 PM      8566    2.00    1.00    0.00    3.00     0  java
 03:47:34 PM     16730    1.00    0.00    0.00    1.00     0  AliHids
-
+```
+```wiki
 pidstat看上去就像top，不过top的输出会覆盖掉之前的输出，而pidstat的输出则添加在之前的输出的后面。这有利于观察数据随时间的变动情况，也便于把你看到的内容复制粘贴到调查报告中。
+```
 
-iostat -xz 1
+#### iostat -xz 1
+```shell
 Linux 2.6.32-431.23.3.el6.x86_64 (iZ25sienu61Z) 01/20/2016 _x86_64_	(2 CPU)
 
 avg-cpu:  %user   %nice %system %iowait  %steal   %idle
@@ -74,27 +88,30 @@ avg-cpu:  %user   %nice %system %iowait  %steal   %idle
 
 Device:         rrqm/s   wrqm/s     r/s     w/s   rsec/s   wsec/s avgrq-sz avgqu-sz   await  svctm  %util
 xvda              0.00     0.25    0.04    1.24     1.87    11.93    10.80     0.01    4.57   0.69   0.09
-
+```
+```wiki
 r/s，w/s，rkB/s，wkB/s：分别表示每秒设备读次数，写次数，读的KB数，写的KB数。它们描述了磁盘的工作负载。也许性能问题就是由过高的负载所造成的。
 await：I/O平均时间，以毫秒作单位。它是应用中I/O处理所实际消耗的时间，因为其中既包括排队用时也包括处理用时。如果它比预期的大，就意味着设备饱和了，或者设备出了问题。
 avgqu-sz：分配给设备的平均请求数。大于1表示设备已经饱和了。（不过有些设备可以并行处理请求，比如由多个磁盘组成的虚拟设备）
 %util：设备使用率。这个值显示了设备每秒内工作时间的百分比，一般都处于高位。低于60%通常是低性能的表现（也可以从await中看出），不过这个得看设备的类型。接近100%通常意味着饱和。
+```
 
-sar -n DEV 1
+#### sar -n DEV 1
+```shell
 Linux 2.6.32-431.23.3.el6.x86_64 (iZ25sienu61Z) 01/20/2016 _x86_64_	(2 CPU)
 
 03:56:01 PM     IFACE   rxpck/s   txpck/s    rxkB/s    txkB/s   rxcmp/s   txcmp/s  rxmcst/s
 03:56:02 PM        lo      0.00      0.00      0.00      0.00      0.00      0.00      0.00
 03:56:02 PM      eth0     96.00     19.00     12.79      1.46      0.00      0.00      0.00
 03:56:02 PM      eth1     68.00     56.00      4.03      6.58      0.00      0.00      0.00
-
+```
 这个命令可以用于检查网络流量的工作负载：rxkB/s和txkB/s，以及它是否达到限额了。
 
 上面的例子中，eth0接收的流量达到22Mbytes/s，也即176Mbits/sec（限额是1Gbit/sec）
 
 
-sar -n TCP,ETCP 1
-
+#### sar -n TCP,ETCP 1
+```shell
 Linux 2.6.32-431.23.3.el6.x86_64 (iZ25sienu61Z) 01/20/2016 _x86_64_	(2 CPU)
 
 04:00:50 PM  active/s passive/s    iseg/s    oseg/s
@@ -108,6 +125,8 @@ Linux 2.6.32-431.23.3.el6.x86_64 (iZ25sienu61Z) 01/20/2016 _x86_64_	(2 CPU)
 
 04:00:51 PM  atmptf/s  estres/s retrans/s isegerr/s   orsts/s
 04:00:52 PM      0.00      0.00      0.00      0.00      0.00
+```
+```wiki
 这个命令显示一些关键TCP指标的汇总。其中包括：
 active/s：本地每秒创建的TCP连接数（比如concept()创建的）
 passive/s：远程每秒创建的TCP连接数（比如accept()创建的）
@@ -115,3 +134,4 @@ retrans/s：每秒TCP重传次数
 
 主动连接数（active）和被动连接数（passive）通常可以用来粗略地描述系统负载。可以认为主动连接是对外的，而被动连接是对内的，虽然严格来说不完全是这个样子。（比如，一个从localhost到localhost的连接）
 重传是网络或系统问题的一个信号；它可能是不可靠的网络（比如公网）所造成的，也有可能是服务器已经过载并开始丢包。在上面的例子中，每秒只创建一个新的TCP连接。
+```
