服务器免密登录

--- a/_posts/bigdata/2016-08-10-storm集群搭建.md
+++ b/_posts/bigdata/2016-08-10-storm集群搭建.md
@@ -53,17 +53,35 @@ ssh-keygen -t rsa
 # 三次回车
 cat id_rsa.pub >> authorized_keys
 # 登录其他主机将id_rsa.pub拷贝到nimbus01的.ssh目录下
-cat id_rsa_nimbus02.pub >> authorized_keys
-cat id_rsa_supervisor01.pub >> authorized_keys
-cat id_rsa_supervisor02.pub >> authorized_keys
-cat id_rsa_supervisor03.pub >> authorized_keys
+cat id_rsa.pub >> authorized_keys_nimbus02
+cat id_rsa.pub >> authorized_keys_supervisor01
+cat id_rsa.pub >> authorized_keys_supervisor02
+cat id_rsa.pub >> authorized_keys_supervisor03
 # 将authorized_keys
-scp /root/.ssh/authorized_keys nimbus01:/root/.ssh/
-scp /root/.ssh/authorized_keys nimbus02:/root/.ssh/
-scp /root/.ssh/authorized_keys supervisor01:/root/.ssh/
-scp /root/.ssh/authorized_keys supervisor02:/root/.ssh/
-scp /root/.ssh/authorized_keys supervisor03:/root/.ssh/
-修改文件权限
+# nimbus01
+scp /root/.ssh/authorized_keys root@nimbus01:/root/.ssh/
+# nimbus02
+scp /root/.ssh/authorized_keys_nimbus02 root@nimbus01:/root/.ssh/
+# supervisor01
+scp /root/.ssh/authorized_keys_supervisor01 root@nimbus01:/root/.ssh/
+# supervisor02
+scp /root/.ssh/authorized_keys_supervisor02 root@nimbus01:/root/.ssh/
+# supervisor03
+scp /root/.ssh/authorized_keys_supervisor03 root@nimbus01:/root/.ssh/
+
+# nimbus01
+cat authorized_keys_nimbus02 >> authorized_keys
+cat authorized_keys_supervisor01 >> authorized_keys
+cat authorized_keys_supervisor02 >> authorized_keys
+cat authorized_keys_supervisor03 >> authorized_keys
+
+scp /root/.ssh/authorized_keys root@nimbus02:/root/.ssh/
+scp /root/.ssh/authorized_keys root@supervisor01:/root/.ssh/
+scp /root/.ssh/authorized_keys root@supervisor02:/root/.ssh/
+scp /root/.ssh/authorized_keys root@supervisor03:/root/.ssh/
+
+# 修改文件加和文件权限
+chmod 700 ../.ssh
 chmod 600 authorized_keys
 ```
 
