--- a/_posts/java/2017-04-25-面试问题(一).md
+++ b/_posts/java/2017-04-25-面试问题(一).md
@@ -18,6 +18,12 @@ description: 面试问题（一）
 
 ##### HashMap为什么不是线程安全的
 
+##### Cookie Session的区别
+HTTP是无状态的协议，引申出Cookie和Session的概念是为了实现用户会话的场景，现如今如东互联网实现方案下，一般利用token或者request_id来实现用户会话
+1. cookie存储在客户端，session存储在服务端
+2. session默认存放在服务端的文件(不是内存)，session 可以放在 文件、数据库、或内存中都可以
+3. session的实现依赖于session id, session id存在cookie中，如果浏览器禁用cookie，还可利用URL传参session_id实现(这里讨论只是session的实现，并非一定用cookie，在HTML5中也可利用LocalStorage来实现session_id存储和请求)，这里说的session id其实就是区分客户端的唯一标示
+
 ##### LocalThread应用场景，如何实现的线程隔离
 利用Thread.currentThread()得到当前运行线程，然后通过多态和ThreadFactory特性调用JNI得到当前线程下的运行对象
 ##### try{return}catch{return}finally{return}有无异常时如何返回
