--- a/_posts/java/2017-02-12-jvm.md
+++ b/_posts/java/2017-02-12-jvm.md
@@ -54,7 +54,7 @@ description: 深入理解JVM虚拟机-读书笔记
 ### 高效并发
 1. 主内存和工作内存
 2. 交互操作（lock/unlock/read/load/use/assign/store/write）
-3. volatile
+3. volatile保证对象在内存中的可见性
 4. long和double特殊性，虚拟机针对64位的数据读写操作作为原子性操作
 5. 基于lock和unlock操作，虚拟机提供了monitorenter和monitorexit字节码指令隐式实现的synchronized
 6. 线程状态（New、Running、Waiting、Timed Waiting、Blocked、Terminaled）
