--- a/_posts/linux/2017-04-11-Centos6.x安装supervisor并开机启动.md
+++ b/_posts/linux/2017-04-11-Centos6.x安装supervisor并开机启动.md
@@ -7,12 +7,13 @@ description: supervisor
 
 ## supervisor安装
 ### 方法一
+```shell
 python -V
 2.6.6
 yum install epel* python python-pip -y
 easy_install supervisor
 echo_supervisord_conf > /etc/supervisord.conf
-
+```
 
 ### 方法二
 ```shell
