--- a/_posts/linux/2017-04-11-Centos6.x安装supervisor并开机启动.md
+++ b/_posts/linux/2017-04-11-Centos6.x安装supervisor并开机启动.md
@@ -10,21 +10,34 @@ description: supervisor
 ```shell
 python -V
 2.6.6
-yum install epel* python python-pip -y
+yum install python-setuptools
 easy_install supervisor
-echo_supervisord_conf > /etc/supervisord.conf
+echo_supervisord_conf > supervisord.conf
 ```
 
 ### 方法二
 ```shell
 wget --no-check-certificate https://bootstrap.pypa.io/get-pip.py
 python get-pip.py
+pip install supervisor
+```
+
+### 方法三
+如果使用前两种方法后执行supervisord -c /etc/supervisord.conf报错：
+```shell
+DEPRECATION: Python 2.6 is no longer supported by the Python core team, please upgrade your Python. A future version of pip will drop support for Python 2.6
+```
+很遗憾安装supervisor失败，由于Python版本过期导致，这时候就要升级Python版本了，思路很简单：保留原有的Python2.6版本，源码安装新的Python2.7，见下命令注释
+```shell
+# 直接下载setuptools 利用easy_install安装supervisor
+wget https://bootstrap.pypa.io/ez_setup.py -O - | python
+unzip setuptools-33.1.1.zip
+python easy_install.py supervisor
+echo_supervisord_conf > /etc/supervisord.conf
 ```
 
 ## 配置和常用命令
 ```shell
-# 声明配置文件
-supervisord -c /etc/supervisord.conf
 # 编辑
 vim supervisor.conf
 # 指定自定义配置统一目录
