--- a/_posts/linux/2017-07-05-awk和sed用法.md
+++ b/_posts/linux/2017-07-05-awk和sed用法.md
@@ -8,7 +8,7 @@ description: supervisor
 awk和sed用法-实际应用中小技巧
 
 ### 适用人群
-初学者、开发人员日常筛选日志或者写一写简单的shell脚本，[学习站点](https://www.tutorialspoint.com/unix_commands/awk.htm)，基础的语法就不提了，主要记录一下常用的命令，加深记忆
+初学者、开发人员日常筛选日志或者写一写简单的shell脚本，[学习站点](https://www.tutorialspoint.com/unix_commands)，基础的语法就不提了，主要记录一下常用的命令，加深记忆
 
 ### awk
 
@@ -58,4 +58,5 @@ awk 'END { print NR }' sample.txt
 > $N 指定第N列，N=0为全文
 > NR 行数
 > NF 不为空的总行数
+> print 打印关键字，必须在{}内使用
 ### sed
