新增atom和idea快捷键

--- a/_posts/golang/2017-03-19-安装.md
+++ b/_posts/golang/2017-03-19-安装.md
@@ -23,7 +23,7 @@ mkdir $GOPATH/github.com/src/hello
 
 ### 选择IDE
 
-我选择的是Web Storm，对于市面上流行的开发工具体验比较了一下
+我选择的是Gogland，对于市面上流行的开发工具体验比较了一下
 
 Web Storm	因习惯于IDEA，所以上手非常快，安装golang插件后，可以直接debug
 
