--- a/_posts/golang/2017-09-22-beego应用框架学习.md
+++ b/_posts/golang/2017-09-22-beego应用框架学习.md
@@ -5,4 +5,18 @@ categories: golang
 description: beego应用框架上手学习
 ---
 
-###
+### 下载安装beego
+```shell
+# 下载beego源码
+go get github.com/astaxie/beego
+# 安装beego工具包
+go get github.com/beego/bee
+```
+### 新建项目
+
+```shell
+# 操作目录移动
+cd $GOPATH/src
+# 新建
+bee new quickstart
+```
