--- a/_posts/linux/2017-04-12-系统资源监控命令.md
+++ b/_posts/linux/2017-04-12-系统资源监控命令.md
@@ -135,3 +135,13 @@ retrans/s：每秒TCP重传次数
 主动连接数（active）和被动连接数（passive）通常可以用来粗略地描述系统负载。可以认为主动连接是对外的，而被动连接是对内的，虽然严格来说不完全是这个样子。（比如，一个从localhost到localhost的连接）
 重传是网络或系统问题的一个信号；它可能是不可靠的网络（比如公网）所造成的，也有可能是服务器已经过载并开始丢包。在上面的例子中，每秒只创建一个新的TCP连接。
 ```
+
+
+#### 修改用户最大进程数和open files
+```shell
+ulimit -a
+# max user process
+vi /etc/security/limits.d/90-nproc.conf
+# open files
+vi /etc/security/limits.conf
+```
