--- a/_posts/java/2017-04-02-maven.md
+++ b/_posts/java/2017-04-02-maven.md
@@ -21,7 +21,7 @@ description: maven基础知识
 | maven-surefire-plugin   | 跳过测试、排除某些 测试类、或者使用一些TestNG               |
 
 
-### 提升mvn打包
+### 项目过大，依赖的module过多，如何提升mvn打包效率
 ```shell
 mvn -help
 
