--- a/_posts/linux/2017-04-12-系统资源监控命令.md
+++ b/_posts/linux/2017-04-12-系统资源监控命令.md
@@ -142,6 +142,11 @@ retrans/s：每秒TCP重传次数
 ulimit -a
 # max user process
 vi /etc/security/limits.d/90-nproc.conf
+
+user    soft    nproc     65535
 # open files
 vi /etc/security/limits.conf
+
+* soft nofile 65535
+* hard nofile 65535
 ```
