--- a/_posts/java/2018-01-17-activemq.md
+++ b/_posts/java/2018-01-17-activemq.md
@@ -10,7 +10,6 @@ description: activemq应用
 
 ```xml
 <!-- 监听活动状态变更事件 -->
-
     <bean class="org.springframework.beans.factory.config.PropertyPlaceholderConfigurer">
         <property name="locations">
             <list>
@@ -95,7 +94,7 @@ useCompression=false
 
 JmsTemplate
 # 发布订阅模式 默认为 point-to-point 队列模式
-pubSubDomain=false#
+pubSubDomain=false
 # 投递模式 NON_PERSISTENT=1 PERSISTENT=2
 deliveryMode=2
 # 是否开启服务质量
@@ -106,6 +105,62 @@ timeToLive=1
 
 默认配置Queue生产消息性能只有25QPS
 
+```java
+
+# 生产端
+
+    @Qualifier("testJmsTemplate")
+    @Autowired
+    private JmsTemplate jmsTemplate;
+
+    @Qualifier("maoyunDQLQueue")
+    @Autowired
+    private ActiveMQQueue queue;
+
+    @Test
+    public void testSender() throws InterruptedException {
+
+        System.out.println("开始测试");
+        long time = System.currentTimeMillis();
+        String msg = "testJmsTemplatate";
+        for (int i=0;i<2000;i++){
+            jmsTemplate.send(queue, (Session session) -> {
+                return session.createTextMessage(msg);
+            });
+        }
+        long end = System.currentTimeMillis();
+        System.out.println("执行时长："+(end - time) + "毫秒");
+    }
+
+# 消费端
+
+public class ReceiveQueue implements SessionAwareMessageListener<TextMessage> {
+
+
+  @Override
+  public void onMessage(TextMessage message, Session session) throws JMSException {
+
+      String text = null;
+      try {
+          text = message.getText();
+          System.out.println("收到消息：" + text);
+
+          if ("test".equals(text)){
+              System.out.println("执行不符合预期,发起重试");
+//                boolean transacted = session.getTransacted();
+              session.recover();
+          } else {
+              session.commit();
+
+          }
+      } catch (JMSException e) {
+          System.out.println("发生异常:" + e.getMessage());
+          session.close();
+      }
+  }
+}
+```
+
 
 ### 关于死信队列
 
@@ -114,3 +169,30 @@ timeToLive=1
   1. 消息超出重发次数(默认6次 详见redeliveryPolicy)则会被转入DLQ
   2. 消息过期(与timeToLive相关)
 ```
+
+
+### 关于将MQ用于通知下游服务的思考
+> 需求：上游消费推送任务需要用http推送给下游系统，如果推送失败发起重试，同一个任务推送失败后每隔一段时间发起重试
+
+> 思考：可利用ActiveMQ的重试机制满足需求
+
+```xml
+<property name="redeliveryPolicy">
+            <bean class="org.apache.activemq.RedeliveryPolicy">
+                <!--是否在每次尝试重新发送失败后,增长这个等待时间-->
+                <property name="useExponentialBackOff" value="true"/>
+                <!--重发次数,默认为6次-->
+                <property name="maximumRedeliveries" value="5"/>
+                <!--重发时间间隔,默认为1秒-->
+                <property name="initialRedeliveryDelay" value="2000"/>
+                <!--第一次失败后重新发送之前等待500毫秒,第二次失败再等待2000 * 2毫秒,这里的2就是value-->
+                <property name="backOffMultiplier" value="2"/>
+                <!--最大传送延迟，只在useExponentialBackOff为true时有效（V5.5），假设首次重连间隔为10ms，倍数为2，那么第 二次重连时间间隔为 20ms，第三次重连时间间隔为40ms，当重连时间间隔大的最大重连时间间隔时，以后每次重连时间间隔都为最大重连时间间隔。-->
+                <property name="maximumRedeliveryDelay" value="8000"/>
+            </bean>
+        </property>
+```
+
+> 测试后的问题：虽然可以满足需求，但是对于单个Consumer消费失败后发起重试期间，整个队列处于阻塞状态，目前还在解决中...
+
+// TODO
