--- a/_posts/linux/2018-02-27-内网穿透frp实践.md
+++ b/_posts/linux/2018-02-27-内网穿透frp实践.md
@@ -37,6 +37,10 @@ frp和比较通用的ngrok相比，frp虽然需要在远程和内网配置和安
 [common]
 bind_port = 7000
 vhost_http_port = 80
+# 开启dashboard 用户名密码
+dashboard_port = 7500
+dashboard_user = admin
+dashboard_pwd = 123456
 ```
 
 > supervisord守护进程
@@ -61,7 +65,15 @@ supervisorctl update
 supervisorctl start frps
 ```
 
+> Dashboard
 
+```wiki
+http://forward.muarine.com:7500
+```
+
+> 自定义域名DNS解析
+
+域名解析指向到x.x.x.x
 
 #### 内网服务器配置
 
@@ -69,11 +81,12 @@ supervisorctl start frps
 
 ```ini
 [common]
-server_addr = 101.200.196.234
+server_addr = x.x.x.x
 server_port = 7000
 
 [web]
 type = http
+# 不填则默认指向到本机
 local_ip = 10.10.11.47
 local_port = 8080
 custom_domains = forward.muarine.com
