--- a/_posts/linux/2018-02-27-内网穿透frp实践.md
+++ b/_posts/linux/2018-02-27-内网穿透frp实践.md
@@ -21,7 +21,7 @@ frp和比较通用的ngrok相比，frp虽然需要在远程和内网配置和安
 
 #### 通信架构
 
-![frp架构](https://github.com/fatedier/frp/blob/master/doc/pic/architecture.png)
+![frp架构](https://github.com/fatedier/frp/blob/master/doc/pic/architecture.png?raw=true)
 
 #### 下载地址
 
