--- a/_posts/linux/2018-02-27-内网穿透frp实践.md
+++ b/_posts/linux/2018-02-27-内网穿透frp实践.md
@@ -73,7 +73,7 @@ http://forward.muarine.com:7500
 
 > 自定义域名DNS解析
 
-域名解析指向到x.x.x.x
+将forward.muarine.com域名解析指向到x.x.x.x
 
 #### 内网服务器配置
 
@@ -118,4 +118,3 @@ startsecs=3
 supervisorctl update
 supervisorctl start frpc
 ```
-
