--- a/_posts/linux/2017-04-11-Centos6.x安装supervisor并开机启动.md
+++ b/_posts/linux/2017-04-11-Centos6.x安装supervisor并开机启动.md
@@ -139,3 +139,47 @@ chkconfig --add supervisord
 chkconfig supervisord --level 345 on
 chmod +x /etc/init.d/supervisord
 ```
+
+
+## Ubuntu自启动配置方式
+
+### apt-get install supervisor
+
+```wiki
+自启动很简单，安装成功后直接在/etc/rc.local文件下，exit 0 前输入：
+service supervisor start
+exit 0
+
+
+systemctl enable supervisor.service
+```
+
+### 自注册systemctl服务
+
+```wiki
+1. 在/lib/systemd/system目录下，创建supervisor.service文件,注意supervisord和supervisorctl的启动目录
+
+[Unit]
+Description=supervisor
+After=network.target
+
+[Service]
+Type=forking
+ExecStart=/usr/bin/supervisord -c /etc/supervisor/supervisord.conf
+ExecStop=/usr/bin/supervisorctl $OPTIONS shutdown
+ExecReload=/usr/bin/supervisorctl $OPTIONS reload
+KillMode=process
+Restart=on-failure
+RestartSec=42s
+
+[Install]
+WantedBy=multi-user.target
+
+2. 设置开机启动
+systemctl enable supervisor.service
+systemctl daemon-reload
+
+
+3. 修改文件权限766
+chmod 766 supervisor.service
+```
