--- a/_posts/golang/2017-09-22-beego应用框架学习.md
+++ b/_posts/golang/2017-09-22-beego应用框架学习.md
@@ -8,9 +8,11 @@ description: beego应用框架上手学习
 ### 下载安装beego
 ```shell
 # 下载beego源码
-go get github.com/astaxie/beego
+go get -u github.com/astaxie/beego
 # 安装beego工具包
-go get github.com/beego/bee
+go get -u github.com/beego/bee
+# 指定module安装
+go get -u github.com/golang/protobuf/{protoc-gen-go,proto}
 ```
 ### 新建项目
 
@@ -20,3 +22,13 @@ cd $GOPATH/src
 # 新建
 bee new quickstart
 ```
+
+### 命令行启动 定义环境变量
+param1=xx ProRunMode=prod go run main.go
+```wiki
+1. 启动参数放置在go语句前边
+2. 参数值以键值对的方式组装
+3. 多个参数用空格分隔
+```
+
+###
