api Gateway design

--- a/_posts/java/2017-04-25-面试问题(一).md
+++ b/_posts/java/2017-04-25-面试问题(一).md
@@ -44,3 +44,15 @@ HTTP是无状态的协议，引申出Cookie和Session的概念是为了实现用
 饿汉
 内部类
 枚举
+
+##### 如何排查服务器CPU100%
+
+##### 形如"catch[text] find[memory]"存在于日志文件中，如何匹配catch和find后的文本并去重
+
+##### JAVA中有哪些锁，分布式锁怎么实现
+
+##### Mysql有哪些锁
+
+##### Mysql的索引种类，都有什么特点
+
+##### Mysql主从模式用bin-log方式同步，但实际业务中发现数据同步有延迟导致
