activemq 多集群部署

--- a/_posts/linux/2017-04-12-系统资源监控命令.md
+++ b/_posts/linux/2017-04-12-系统资源监控命令.md
@@ -150,3 +150,23 @@ vi /etc/security/limits.conf
 * soft nofile 65535
 * hard nofile 65535
 ```
+
+
+#### 检查TCP连接数
+
+netstat -an | awk '/^tcp/ {++S[$NF]} END {for(a in S) print a, S[a]}'
+
+
+#### tomcat启动慢
+
+```shell
+yum install rng-tools
+
+systemctl start rngd
+
+systemctl daemon-reload
+
+systemctl restart rngd
+
+cat /proc/sys/kernel/random/entropy_avail
+```
